# hitl-middleware

./: .env  Cargo.toml  README.md
docker/: docker-compose.yml
migrations/: 20240430143722_create_inference_jobs_table.down.sql  20240430143722_create_inference_jobs_table.up.sql
src/: data.rs  error.rs  main.rs  model.rs  mq.rs
src/routes/: external.rs  hitl.rs  mod.rs
