[package]
name = "hitl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.199", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["trace"] }
hyper = { version = "1.3.1", features = ["client"] }
tracing = "0.1.40"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
http-body-util = "0.1.1"

