[package]
name = "hitl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.199", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["trace"] }
hyper = { version = "1.3.1", features = ["client"] }
tracing = "0.1.40"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
lapin = { version = "2.3.3", default-features = false, features = ["native-tls"] }
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
thiserror = "1.0.59"